--- a/力扣初级算法.md
+++ b/力扣初级算法.md
@@ -426,6 +426,59 @@ public class TestOperateString{
 
 **提示：**你可以假定该字符串只包含小写字母。
 
+#### 使用两个for循环
+
+每一次内循环如果遇到相对则退出内循环，一次内循环结束没有相等的则说明没有重复值
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var firstUniqChar = function(s) {
+    let flag;
+	for (let i=0;i<s.length;i++){
+        flag=0;
+		for (let j=0;j<s.length;j++){
+            if (i!=j) {
+                if (s[i]==s[j]) {
+                    flag=1;
+                    break;
+                }
+            }
+		}
+        if (flag==0) {
+            return i;
+        }
+	}
+    return -1;
+};
+
+let str1 = "leetcode";
+let str2 = "aabbcdefg";
+let result=firstUniqChar(str2);
+console.log(result);
+```
+
+#### 比较indexOf和lastIndexOf的返回值
+
+只要第一个和最后一个的索引一致，则说明不重复
+
+```js
+var firstUniqChar = function(s) {
+	for (let i=0;i<s.length;i++){
+        if (s.indexOf(s[i])===s.lastIndexOf(s[i])) {
+            return i;
+        }
+	}
+    return -1;
+};
+```
+
+#### 计数字母
+
+构建一个空对象，循环字符串，记录每个字母出现的次数和第一次出现的位置
+
 ```
 
 ```
