--- a/力扣初级算法.md
+++ b/力扣初级算法.md
@@ -479,8 +479,36 @@ var firstUniqChar = function(s) {
 
 构建一个空对象，循环字符串，记录每个字母出现的次数和第一次出现的位置
 
-```
-
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var firstUniqChar = function(s) {
+    var alphas=new Array();
+    var counts=new Array();
+    var indexs=new Array();
+	for (let i=0;i<s.length;i++){
+        let index0=alphas.indexOf(s[i]);
+        if (index0!==-1) {
+            counts[index0]+=1;
+        }else{
+            counts.push(1);
+            alphas.push(s[i]);
+            indexs.push(i);
+        }
+	}
+    for (let i=0;i<counts.length;i++){
+        if (counts[i]===1) {
+            return indexs[i];
+        }
+    }
+    return -1;
+};
+let str1 = "leetcode";
+let str2 = "aabbcdeafg";
+let result=firstUniqChar(str2);
+console.log(result);
 ```
 
 
@@ -490,6 +518,62 @@ var firstUniqChar = function(s) {
 给定两个字符串 s 和 t ，编写一个函数来判断 t 是否是 s 的字母异位词。
 
 注意：若 s 和 t 中每个字符出现的次数都相同，则称 s 和 t 互为字母异位词。
+
+使用数组计数
+
+```js
+/**
+ * @param {string} s
+ * @param {string} t
+ * @return {boolean}
+ */
+var isAnagram = function(s, t) {
+    if (s.length!==t.length) {
+        return false;
+    }
+    var alphas1=new Array();
+    var alphas2=new Array();
+    var counts1=new Array();
+    var counts2=new Array();
+    for (let i=0;i<s.length;i++){
+        let index1=alphas1.indexOf(s[i]);
+        let index2=alphas2.indexOf(t[i]);
+        if (index1!==-1) {
+            counts1[index1]+=1;
+        }else{
+            counts1.push(1);
+            alphas1.push(s[i]);
+        }
+        if (index2!==-1) {
+            counts2[index2]+=1;
+        }else{
+            counts2.push(1);
+            alphas2.push(t[i]);
+        }
+    }
+    if (alphas1.length!==alphas2.length) {return false;}
+    for (let i=0;i<alphas1.length;i++){
+        if (counts1[i]!==counts2[alphas2.indexOf(alphas1[i])]) {
+            return false;
+        }
+    }
+    return true;
+
+};
+
+let str1 = "anaagram";
+let str2 = "naggaram";
+let result=isAnagram(str1,str2);
+console.log(result);
+```
+
+使用对象计数
+
+```js
+
+```
+
+调用内置方法
 
 ```
 
