--- a/力扣初级算法.md
+++ b/力扣初级算法.md
@@ -426,7 +426,7 @@ public class TestOperateString{
 
 **提示：**你可以假定该字符串只包含小写字母。
 
-#### 使用两个for循环
+使用两个for循环
 
 每一次内循环如果遇到相对则退出内循环，一次内循环结束没有相等的则说明没有重复值
 
@@ -460,7 +460,7 @@ let result=firstUniqChar(str2);
 console.log(result);
 ```
 
-#### 比较indexOf和lastIndexOf的返回值
+比较indexOf和lastIndexOf的返回值
 
 只要第一个和最后一个的索引一致，则说明不重复
 
@@ -475,7 +475,7 @@ var firstUniqChar = function(s) {
 };
 ```
 
-#### 计数字母
+计数字母
 
 构建一个空对象，循环字符串，记录每个字母出现的次数和第一次出现的位置
 
@@ -587,7 +587,162 @@ console.log(result);
 
 **说明：**本题中，我们将空字符串定义为有效的回文串。
 
+```js
+/**
+ * @param {string} s
+ * @return {boolean}
+ */
+var isPalindrome = function(s) {
+    s=s.toLowerCase();
+    s=s.replace(/[^a-z0-9]/g,"")
+    console.log(s);
+    for (let i=0;i<s.length/2;i++){
+        if (s[i]!==s[s.length-1-i]) {
+            return false;
+        }
+    }
+    return true;
+};
+
+
+let str1 = "A man, a plan, a canal: Panama";
+let result=isPalindrome(str1);
+console.log(result);
+
 ```
 
+### 6. 字符串转换整数 (atoi)
+
+请你来实现一个 myAtoi(string s) 函数，使其能将字符串转换成一个 32 位有符号整数（类似 C/C++ 中的 atoi 函数）。
+
+函数 myAtoi(string s) 的算法如下：
+
+读入字符串并丢弃无用的前导空格
+检查下一个字符（假设还未到字符末尾）为正还是负号，读取该字符（如果有）。 确定最终结果是负数还是正数。 如果两者都不存在，则假定结果为正。
+读入下一个字符，直到到达下一个非数字字符或到达输入的结尾。字符串的其余部分将被忽略。
+将前面步骤读入的这些数字转换为整数（即，"123" -> 123， "0032" -> 32）。如果没有读入数字，则整数为 0 。必要时更改符号（从步骤 2 开始）。
+如果整数数超过 32 位有符号整数范围 [−231,  231 − 1] ，需要截断这个整数，使其保持在这个范围内。具体来说，小于 −231 的整数应该被固定为 −231 ，大于 231 − 1 的整数应该被固定为 231 − 1 。
+返回整数作为最终结果。
+注意：
+
+本题中的空白字符只包括空格字符 ' ' 。
+除前导空格或数字后的其余字符串外，请勿忽略 任何其他字符。
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var myAtoi = function(s) {
+    s=s.trim();
+    let patt=/[^0-9+-]/
+    if (patt.test(s[0])) {
+        return 0;
+    }
+    let nums=new Array();
+    nums.push(s[0]);
+    for (let i=1;i<s.length;i++){
+        if (/\D/.test(s[i])) {
+            //查找到非数字停止
+            break;
+        }else{
+            nums.push(s[i]);
+        }
+    }
+
+    let num=nums.join("");
+    if (num==="+" || num==="-") {return 0;}
+    num=parseInt(num);
+    const START=-Math.pow(2,31);
+    const END=Math.pow(2,31)-1;
+
+    if (num<START) {return START;}
+    if (num>END) {return END;}
+    return num;
+};
+
+
+let str1 = "+-12";
+let result=myAtoi(str1);
+console.log(result);
+
+```
+
+直接调用内置函数
+
+```js
+var myAtoi = function(s) {
+    s=s.trim();
+    let num=parseInt(s);
+    if (isNaN(num)) {
+        return 0;
+    }
+    const START=-Math.pow(2,31);
+    const END=Math.pow(2,31)-1;
+
+    if (num<START) {return START;}
+    if (num>END) {return END;}
+    return num;
+};
+
+
+let str1 = "words and 987";
+let result=myAtoi(str1);
+console.log(result);
+```
+
+### 7. 实现 strStr()
+
+给你两个字符串 haystack 和 needle ，请你在 haystack 字符串中找出 needle 字符串出现的第一个位置（下标从 0 开始）。如果不存在，则返回  -1 。
+
+说明：
+
+当 needle 是空字符串时，我们应当返回什么值呢？这是一个在面试中很好的问题。
+
+对于本题而言，当 needle 是空字符串时我们应当返回 0 。这与 C 语言的 strstr() 以及 Java 的 indexOf() 定义相符。
+
+```js
+/**
+ * @param {string} haystack
+ * @param {string} needle
+ * @return {number}
+ */
+var strStr = function(haystack, needle) {
+    if (haystack.length<needle.length) {return -1;}
+    if (needle==="") {return 0;}
+    if (haystack.length===needle.length && haystack===needle) {return 0;}
+    if (haystack.length===needle.length && haystack!==needle) {return -1;}
+    for (let i=0;i<haystack.length-needle.length+1;i++){
+        if (haystack[i]===needle[0]) {
+            let flag=true;
+            for (let j=1;j<needle.length;j++){
+                if (haystack[i+j]!==needle[j]){
+                    flag=false;
+                    break;
+                }
+            }
+            if (flag) {
+                return i;
+            }
+
+        }
+    }
+    return -1;
+};
+
+
+let str1 = "heffdddllo";
+let str2 = "ell";
+let result=strStr(str1,str2);
+console.log(result);
+
+```
+
+调用内置方法
+
+```js
+var strStr = function(haystack, needle) {
+    return haystack.indexOf(needle);
+};
 ```
 
