--- a/牛客前端基础编程题.md
+++ b/牛客前端基础编程题.md
@@ -1,3 +1,132 @@
+# 入门前端篇
+
+## **FED1** **表单类型**
+
+请依次写出以下类型的输入框。
+\1. 类型为密码，默认值为"nowcoder"
+\2. 类型为复选框，且状态为已勾选
+
+```html
+	<form>
+		<input type="password" name="pass1" value="nowcoder">
+		<input type="checkbox" name="checkbox1" checked>
+	</form>
+```
+
+## **FED2** **表格结构**
+
+请写出具有表格标题为"nowcoder"的2行3列表格结构。
+
+```html
+	<table>
+		<caption>nowcoder</caption>
+		<tr><td></td><td></td><td></td></tr>
+		<tr><td></td><td></td><td></td></tr>
+	</table>
+```
+
+## **FED3** **图像标签属性**
+
+请写出具有标题属性和代替文本属性的图片标签。
+
+```html
+	<img src="./image2/img8.png" alt="liverpool" title="log">
+```
+
+## **FED4** **新窗口打开文档**
+
+请写出可以在新窗口打开文档的a标签。
+
+```html
+<a href="https://mo.fish" target="_blank">mofish</a>
+```
+
+## **FED5** **自定义列表**
+
+请写出列表项为"nowcoder"且列表项内容也为"nowcoder"的自定义列表。
+
+```html
+	<dl>
+		<dt>nowcoder</dt>
+		<dd>nowcoder</dd>
+	</dl>
+```
+
+## **FED6** **语义化标签**
+
+请使用语义化标签创建头部标签且包含导航标签。
+注意：只需在html模块填写标签结构，有且仅有一个头部标签和一个导航标签。
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title></title>
+	<header>
+		<nav>
+			<li><a href="#"></a></li>
+		</nav>
+	</header>
+</head>
+<body>
+
+</body>
+</html>
+```
+
+## **FED7** **音频媒体标签属性**
+
+请写出具有控件功能的音频媒体标签。
+
+```html
+	<audio controls>
+		<source src="audio1/1000452.mp3" type="audio/mpeg">
+	</audio>
+```
+
+## **FED8** **视频媒体标签属性**
+
+请写出具有当视频的媒体数据加载期间发生错误时执行某个方法事件的视频媒体标签。
+
+```html
+	<video width="300" height="500" onerror="alert('can not play')" controls>
+		<source src="video1/video1.mp4" type="video/mp4">
+			该浏览器不支持vedio
+	</video>
+```
+
+## **FED9** **CSS选择器——标签、类、ID选择器**
+
+请将html模块中字体内容是"红色"的字体颜色设置为"rgb(255, 0, 0)"，"绿色"设置为"rgb(0, 128, 0)"，"黑色"设置为"rgb(0, 0, 0)"，且字体大小都为20px。
+
+```html
+<html>
+    <head>
+        <meta charset=utf-8>
+        <style type="text/css">
+		div{
+			color: rgb(255, 0, 0);
+			font-size: 20px;
+		}
+		.green{
+			color: rgb(0, 128, 0);
+		}
+		#black{
+			color: rgb(0, 0, 0);
+		}
+
+        </style>
+    </head>
+    <body>
+        <div>红色</div>
+        <div class='green'>绿色</div>
+        <div id='black'>黑色</div>
+    </body>
+</html>
+```
+
 ## **FED10** **CSS选择器——伪类选择器**
 
 请将html模块中ul列表的第2个li标签和第4个li标签的背景颜色设置成"rgb(255, 0, 0)"。
@@ -94,3 +223,203 @@ div::after表示在div元素后插入内容。注明需要设置display属性将
 ## **FED13** **设置盒子宽高**
 
 请将html模块类为"box"的div元素宽度和高度都设置为100px，且内间距为20px、外间距为10px。
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<style type="text/css">
+		.box{
+			width: 100px;
+			height: 100px;
+			margin: 10px;
+			padding: 20px;
+		}
+		
+	</style>
+</head>
+<body>
+	<div class="box"></div>
+</body>
+</html>
+```
+
+## **FED14** **浮动和清除浮动**
+
+请将类为"left"的div元素和类为"right"的div元素在同一行上向左浮动，且清除类为"wrap"的父级div元素内部的浮动。
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<style type="text/css">
+		.wrap {
+			/*补全代码*/
+			height: 100px;
+			/*overflow: hidden;*/
+			clear: both;
+			}
+		.left {
+			width: 100px;
+			height: 100px;
+			/*补全代码*/
+			float: left;
+		}
+		.right {
+			width: 100px;
+			height: 100px;
+			/*补全代码*/
+			float: left;
+		}
+		
+	</style>
+</head>
+<body>
+	<div class="wrap">
+		<div class="left"></div>
+		<div class="right"></div>
+	</div>
+</body>
+</html>
+```
+
+## **FED15** **固定定位**
+
+请将html模块类为"box"的div元素固定在视口的左上角。
+
+```html
+<html>
+    <head>
+        <meta charset=utf-8>
+        <style type="text/css">
+            .box {
+                width: 100px;
+                height: 100px;
+                /*补全代码*/
+                position: fixed;
+                top: 0;
+                left: 0;
+            }
+        </style>
+    </head>
+    <body>
+        <div class='box'></div>
+    </body>
+</html>
+```
+
+## **FED16** **绝对定位**
+
+请将html模块类为"btn"的div元素**中心定位**在类为"wrap"的父级div元素右上**顶点处**。
+
+```html
+<html>
+    <head>
+        <meta charset=utf-8>
+        <style type="text/css">
+            .wrap {
+                width: 100px;
+                height: 100px;
+                border: solid 1px black;
+                /*补全代码*/
+                position: relative;
+            }
+            .btn {
+                width: 20px;
+                height: 20px;
+                text-align: center;
+                background-color: red;
+                /*补全代码*/
+                position: absolute;
+                top: -10px;
+                right: -10px;
+            }
+        </style>
+    </head>
+    <body>
+        <div class='wrap'>
+            <div class='btn'>X</div>
+        </div>
+    </body>
+</html>
+```
+
+## **FED17** **行内元素垂直水平居中**
+
+请将html模块中p元素的内容设置为垂直水平居中。
+
+```html
+<html>
+    <head>
+        <meta charset=utf-8>
+        <style type="text/css">
+            p {
+                width: 800px;
+                height: 40px;
+                border: solid 1px black;
+                /*补全代码*/
+                text-align: center;
+                line-height: 40px;
+            }
+        </style>
+    </head>
+    <body>
+        <p>牛客网，是一个集笔面试系统、题库、课程教育、社群交流、招聘内推于一体的招聘类网站。</p>
+    </body>
+</html>
+```
+
+高度为具体的数值的情况，line-height 只需要设置具体的高度即可
+
+## **FED18** **CSS单位（一）**
+
+请将html模块中类为"box"的div元素的宽度和高度设置为自身字体大小的4倍。
+
+```html
+<html>
+    <head>
+        <meta charset=utf-8>
+        <style type="text/css">
+            .box {
+                /*补全代码*/
+                font-size: 1em;
+                width: 4em;
+                height: 4em;
+            }
+        </style>
+    </head>
+    <body>
+        <div class='box'></div>
+    </body>
+</html>
+```
+
+## **FED19** **CSS单位（二）**
+
+请将html模块div元素的宽度和高度设置为html根元素字体大小的4倍。
+注意：只需在css模块补全样式内容，请勿修改html模块。
+
+ rem针对根元素，em针对父元素
+
+```html
+<html>
+    <head>
+        <meta charset=utf-8>
+        <style type="text/css">
+            div {
+                /*补全代码*/
+                width: 4rem;
+                height: 4rem;
+            }
+        </style>
+    </head>
+    <body>
+        <div></div>
+    </body>
+</html>
+```
+
+## **FED20** **基本数据类型检测**
+
