--- a/牛客前端基础编程题.md
+++ b/牛客前端基础编程题.md
@@ -423,3 +423,308 @@ div::after表示在div元素后插入内容。注明需要设置display属性将
 
 ## **FED20** **基本数据类型检测**
 
+请补全JavaScript函数，要求以字符串的形式返回参数的类型。
+注意：只需检测基本数据类型。
+
+```js
+function _typeof(value) {
+    // 补全代码
+    return typeof value;
+}
+
+let str="hello";
+console.log(_typeof(str));
+```
+
+## **FED21** **检测复杂数据类型**
+
+请补全JavaScript函数，要求以Boolean的形式返回第一个参数是否属于第二个参数对象的实例。
+
+```js
+function _instanceof(left,right) {
+    // 补全代码
+    return left instanceof right;
+}
+function _instanceof(left,right) {
+    // 补全代码
+    return left.__proto__ === right.prototype ? true : false;
+}
+
+```
+
+## **FED22** **数据类型转换**
+
+请补全JavaScript函数，要求以字符串的形式返回两个数字参数的拼接结果。
+示例：
+\1. _splice(223,233) -> "223233"
+\2. _splice(-223,-233) -> "-223-233"
+
+```js
+function _splice(left,right) {
+    // 补全代码
+    return left+""+right;
+}
+console.log(_splice(-223,-233));
+
+function _splice(left,right) {
+    // 补全代码
+    return left.toString()+right.toString();
+}
+
+function _splice(left,right) {
+    // 补全代码
+    return `${left}${right}`;
+}
+```
+
+## **FED23** **阶乘**
+
+请补全JavaScript函数，要求返回数字参数的阶乘。
+注意：参数为大于等于0的整数。
+
+```js
+function _factorial(number) {
+    // 补全代码
+    let result=number;
+    while(number>1){
+        number--;
+        result*=number;
+    }
+    return result;
+}
+
+console.log(_factorial(10));
+```
+
+使用递归
+
+```js
+function _factorial(number) {
+    // 补全代码
+    if (number==1) {return 1;}
+    return number*_factorial(number-1);
+}
+
+console.log(_factorial(10));
+```
+
+## **FED24** **绝对值**
+
+请补全JavaScript函数，要求返回数字参数的绝对值。
+
+```js
+function _abs(number) {
+    // 补全代码
+    return number<0 ? -number :number;
+}
+
+console.log(_abs(-13));
+
+function _abs(number) {
+    // 补全代码
+    return Math.abs(number);
+}
+```
+
+## **FED25** **幂**
+
+请补全JavaScript函数，要求返回底数为第一个参数，幂为第二个参数的数值。
+
+```js
+function _pow(number,power) {
+    // 补全代码
+    if (power===0) {return 1;}
+    if (power===1) {return number;}
+    let result=number;
+    while (power>1){
+        result*=number;
+        power--;
+    }
+    return result;
+}
+
+function _pow(number,power) {
+    // 补全代码
+    return Math.pow(number,power);
+}
+```
+
+## **FED26** **平方根**
+
+请补全JavaScript函数，要求返回数字参数的平方根。
+
+```js
+function _sqrt(number) {
+    // 补全代码
+
+    return number>=0 ? Math.sqrt(number) : NaN;
+}
+
+console.log(_sqrt(10));
+
+
+```
+
+使用二分法，会超时
+
+```js
+function _sqrt(number) {
+    // 补全代码
+    if (number===1 || number===0) {return number;}
+    let start=1;
+    let end=number;
+    while(start<end){
+        let mid=(start+number) >> 1;
+        if (mid*mid<number) {
+            start=mid+1;
+        }else if(mid*mid>number){
+            end=mid-1;
+        }else{
+            return mid;
+        }
+    }
+}
+
+console.log(_sqrt(16));
+```
+
+## **FED27** **余数**
+
+请补全JavaScript函数，要求返回数字参数除以2的余数。
+
+```js
+function _remainder(value) {
+    // 补全代码
+    return value%2;
+}
+
+function _remainder(value) {
+    // 补全代码
+    while(value>1){
+        value-=2;
+    }
+    return value;
+}
+```
+
+## **FED28** **返回星期数**
+
+请补全JavaScript函数，要求以字符串的形式返回数字参数所对应的星期。
+示例：
+\1. _getday(1) -> "星期一"
+\2. _getday(7) -> "星期天"
+
+```js
+function _getday(value) {
+    // 补全代码
+    switch (value){
+        case 1: return "星期一";break;
+        case 2: return "星期二";break;
+        case 3: return "星期三";break;
+        case 4: return "星期四";break;
+        case 5: return "星期五";break;
+        case 6: return "星期六";break;
+        default:return "星期天";
+    }
+}
+function _getday(value) {
+    // 补全代码
+    return "星期"+["一","二","三","四","五","六","天"][value-1];
+}
+```
+
+## **FED29** **从大到小排序**
+
+请补全JavaScript函数，要求将数组参数中的数字**从大到小**进行排序并返回。
+
+从小到大排序
+
+```js
+function _sort(array) {
+    // 补全代码
+    for (let i = 0; i < array.length-1; i++) {
+        let min_index=i;
+        let min=array[i];
+        for (let j = i+1; j < array.length; j++) {
+            if (array[j]<min) {
+                min=array[j];
+                min_index=j;
+            }
+        }
+        if (min_index!==i) {
+            array[min_index]=array[i];
+            array[i]=min;
+        }
+    }
+    return array;
+}
+
+function _sort(array) {
+    // 补全代码
+    return array.sort((a,b)=>a-b);
+}
+```
+
+从大到小排序
+
+```js
+function _sort(array) {
+    // 补全代码
+    for (let i = 0; i < array.length-1; i++) {
+        let min_index=i;
+        let min=array[i];
+        for (let j = i+1; j < array.length; j++) {
+            if (array[j]>min) {
+                min=array[j];
+                min_index=j;
+            }
+        }
+        if (min_index!==i) {
+            array[min_index]=array[i];
+            array[i]=min;
+        }
+    }
+    return array;
+}
+
+function _sort(array) {
+    // 补全代码
+    return array.sort((a,b)=>b-a);
+}
+```
+
+## **FED30** **大写字符串**
+
+请补全JavaScript函数，要求将字符串参数转换为大写字符串并返回。
+
+```js
+function _touppercase(string) {
+    // 补全代码
+    return string.toUpperCase();
+}
+```
+
+大写字母A-Z对应的ASCII码值是65-90
+小写字母a-z对应的ASCII码值是97-122
+
+```js
+function _touppercase(string) {
+    // 补全代码
+    let result="";
+    //大写字母A-Z对应的ASCII码值是65-90
+    //小写字母a-z对应的ASCII码值是97-122
+    for (let i = 0; i < string.length; i++) {
+        let code=string.charCodeAt(i);
+        if (code>=97 && code<=122) {
+            result+=String.fromCharCode(code-32);
+        }else{
+            result+=string[i];
+        }
+    }
+    return result;
+}
+
+let test="dsdDSeskk";
+console.log(_touppercase(test));
+```
+
