--- a/力扣初级算法.md
+++ b/力扣初级算法.md
@@ -746,3 +746,149 @@ var strStr = function(haystack, needle) {
 };
 ```
 
+### 8 外观数列
+
+给定一个正整数 n ，输出外观数列的第 n 项。
+
+「外观数列」是一个整数序列，从数字 1 开始，序列中的每一项都是对前一项的描述。
+
+你可以将其视作是由递归公式定义的数字字符串序列：
+
+countAndSay(1) = "1"
+countAndSay(n) 是对 countAndSay(n-1) 的描述，然后转换成另一个数字字符串。
+
+前五项如下：
+
+```tex
+1.     1
+2.     11
+3.     21
+4.     1211
+5.     111221
+第一项是数字 1 
+描述前一项，这个数是 1 即 “ 一 个 1 ”，记作 "11"
+描述前一项，这个数是 11 即 “ 二 个 1 ” ，记作 "21"
+描述前一项，这个数是 21 即 “ 一 个 2 + 一 个 1 ” ，记作 "1211"
+描述前一项，这个数是 1211 即 “ 一 个 1 + 一 个 2 + 二 个 1 ” ，记作 "111221"
+
+```
+
+要 描述 一个数字字符串，首先要将字符串分割为 最小 数量的组，每个组都由连续的最多 相同字符 组成。然后对于每个组，先描述字符的数量，然后描述字符，形成一个描述组。要将描述转换为数字字符串，先将每组中的字符数量用数字替换，再将所有描述组连接起来。
+
+```javascript
+/**
+ * @param {number} n
+ * @return {string}
+ */
+var countAndSay = function(n) {
+    if (n===1) { return ""+1;}
+    let oldStr="1";
+    let newStr="";
+    for (let i=2;i<=n;i++){
+        let count=1;  //计数
+        let num=oldStr[0];
+        let j=1;
+        while(j<oldStr.length){
+            if (num===oldStr[j]) {
+                count+=1;
+                j++;
+            }else{
+                newStr+=""+count+""+num;
+                count=1;
+                num=oldStr[j];
+                j++;
+            }
+        }
+        newStr+=""+count+""+num;
+        oldStr=newStr;
+        newStr="";
+        console.log(oldStr);
+    }
+    return oldStr;
+};
+
+let str1 = 10;
+let result=countAndSay(str1);
+//console.log(typeof result);
+console.log(result);
+
+/*
+1
+11
+21
+1211
+111221
+312211
+13112221
+1113213211
+31131211131221
+13211311123113112211
+*/
+```
+
+### 9 最长公共前缀
+
+编写一个函数来查找字符串数组中的最长公共前缀。
+
+如果不存在公共前缀，返回空字符串 `""`。
+
+```js
+/**
+ * @param {string[]} strs
+ * @return {string}
+ */
+var longestCommonPrefix = function(strs) {
+    if (strs.length===1) {return strs[0];}
+    let minLen=strs[0].length;
+    for (let i=0;i<strs.length;i++){
+        if (strs[i].length===0) {
+            return "";
+        }
+        if (strs[i].length<minLen) {
+            minLen=strs[i].length;
+        }
+    }
+    let alphas=new Array("");
+    for (let i=0;i<minLen;i++){
+        for (let j=1;j<strs.length;j++){
+            if (strs[j][i]!=strs[0][i]) {
+                return alphas.join("");
+            }
+        }
+        alphas.push(strs[0][i]);
+    }
+    return alphas.join("");
+};
+
+
+let str1 = ["flower","flow","flight"];
+let result=longestCommonPrefix(str1);
+//console.log(typeof result);
+console.log(result);
+
+```
+
+利用数组的 Reduce 方法实现的最简洁代码
+
+取第一个字符串为公共前缀
+逐个对比，返回两两元素的公共前缀
+将 2 中的公共前缀和下一个元素对比，得到新的公共前缀
+
+```
+
+```
+
+
+
+## 链表
+
+### 1. 删除链表中的节点
+
+请编写一个函数，用于 删除单链表中某个特定节点 。在设计函数时需要注意，你无法访问链表的头节点 head ，只能直接访问 要被删除的节点 。
+
+题目数据保证需要删除的节点 不是末尾节点 。
+
+```
+
+```
+
