--- a/牛客前端基础编程题.md
+++ b/牛客前端基础编程题.md
@@ -728,3 +728,164 @@ let test="dsdDSeskk";
 console.log(_touppercase(test));
 ```
 
+## **FED31** **对象属性键名**
+
+请补全JavaScript函数，要求以数组的形式输出对象各个属性的键名。
+示例：
+
+1. _keys({name:'nowcoder',age:7}) -> ['name','age']
+   注意：只需考虑对象属性均为原始数据类型的情况。
+
+```js
+function _keys(object) {
+    // 补全代码
+    let keys=new Array();
+    for (let k in object){
+        keys.push(k);
+    }
+    return keys;
+}
+
+let test={name:'nowcoder',age:7};
+let result=_keys(test);
+
+console.log(result);
+
+function _keys(object) {
+    // 补全代码
+    return Object.keys(object);
+}
+
+function _keys(object) {
+    // 补全代码
+    return Object.getOwnPropertyNames(object);
+}
+```
+
+## **FED32** **对象数字**
+
+请补全JavaScript函数，要求将数字参数转换为对象的形式返回。
+示例：
+\1. typeof number === 'number' -> typeof _numbertoobject(number) === 'object'
+
+```js
+function _numbertoobject(number) {
+    // 补全代码
+    return new Number(number);  //[Number: 5]
+}
+
+let test=5;
+let result=_numbertoobject(test);
+console.log(typeof result);
+console.log(result);
+
+function _numbertoobject(number) {
+    // 补全代码
+    return {number};  //{ number: 5 }
+}
+
+function _numbertoobject(number) {
+    // 补全代码
+    return new Object(number);
+}
+
+```
+
+## **FED33** **对象字符串**
+
+请补全JavaScript函数，要求将字符串参数转换为对象的形式返回。
+示例：
+\1. typeof string === 'string' -> typeof _stringtoobject(string) === 'object'
+
+```js
+function _stringtoobject(string) {
+    // 补全代码
+    return {string};  //{ string: 'df5f' }
+}
+
+let test="df5f";
+let result=_stringtoobject(test);
+console.log(typeof result);
+console.log(result);
+
+function _stringtoobject(string) {
+    // 补全代码
+    return new Object(string);  //[String: 'df5f']
+}
+
+function _stringtoobject(string) {
+    // 补全代码
+    return new String(string);
+}
+```
+
+## **FED34** **去除字符串两端空格**
+
+请补全JavaScript函数，要求去除参数字符串两端的空格并返回。
+
+```js
+function _trim(string) {
+    // 补全代码
+    return string.trim();
+}
+
+let test=" dssss ";
+let result=_trim(test);
+
+console.log(result);
+
+function _trim(string) {
+    // 补全代码
+    return string.replace(/^\s*|\s*$/g,'');
+}
+
+```
+
+\s查找空白字符。\S查找非空白字符。
+
+## **FED35** **输出日期**
+
+请补全JavaScript函数，要求以字符串的形式输出时间戳参数所对应的"年-月-日"。
+示例：
+\1. _date(1631159776311) -> '2021-9-9'
+
+```js
+function _date(number) {
+    // 补全代码
+    var date=new Date(number);
+    let year=date.getFullYear();  //从 Date 对象以四位数字返回年份。
+    let month=date.getMonth()+1;  //从 Date 对象返回月份 (0 ~ 11)。
+    let day=date.getDate();  //从 Date 对象返回一个月中的某一天 (1 ~ 31)。
+    let hour=date.getHours();  //返回 Date 对象的小时 (0 ~ 23)。
+    let minute=date.getMinutes();  //返回 Date 对象的分钟 (0 ~ 59)。
+    let second=date.getSeconds();  //返回 Date 对象的秒数 (0 ~ 59)。
+    let weekDay=date.getDay();  //从 Date 对象返回一周中的某一天 (0 ~ 6)。
+    let milliSecond=date.getMinutes();  //返回 Date 对象的毫秒(0 ~ 999)。
+
+    return year+"-"+month+"-"+day;
+}
+
+let test=1631159776311;
+let result=_date(test);
+
+console.log(result);
+
+function _date(number) {
+    // 补全代码
+    return /\d+\/\d+\/\d+/.exec(new Date(number).toLocaleString()).toString().replace(/\//g,"-");
+}
+```
+
+Date 对象用于处理日期与时间。创建 Date 对象： **new Date()**
+
+以下四种方法同样可以创建 Date 对象：
+
+```js
+var d = new Date();
+var d = new Date(milliseconds);
+var d = new Date(dateString);
+var d = new Date(year, month, day, hours, minutes, seconds, milliseconds);
+```
+
+## **FED36** **数字取整**
+
