--- a/牛客前端基础编程题.md
+++ b/牛客前端基础编程题.md
@@ -889,3 +889,126 @@ var d = new Date(year, month, day, hours, minutes, seconds, milliseconds);
 
 ## **FED36** **数字取整**
 
+请补全JavaScript函数，要求返回数字参数的整数部分。
+
+```js
+function _int(value) {
+    // 补全代码
+    return Math.floor(value);
+}
+let test=16.45;
+let result=_int(test);
+
+console.log(result);
+
+return Number((""+value).split(".")[0]);
+return ~~value;
+return parseInt(value);
+return value >> 0;
+```
+
+## **FED37** **数组反转**
+
+请补全JavaScript函数，要求将参数数组反转之后返回。
+
+```js
+function _reverse(array) {
+    // 补全代码
+    let temp;
+    for (let i = 0; i < array.length/2; i++) {
+        temp=array[i];
+        array[i]=array[array.length-1-i];
+        array[array.length-1-i]=temp;
+    }
+    return array;
+}
+
+let test=[1,2,3,4,5];
+let result=_reverse(test);
+console.log(result);
+
+return array.reverse();
+```
+
+## **FED38** **数组转字符串**
+
+请补全JavaScript函数，要求将参数数组转换为字符串输出。
+示例：
+\1. _join([1,'2',3]) -> "123"
+注意：只需考虑一维数组且数据类型为原始数据类型。
+
+```js
+function _join(array) {
+    // 补全代码
+    array[0]=""+array[0];
+    for (let i = 1; i < array.length; i++) {
+        array[0]+=""+array[i];
+    }
+    return array[0];
+}
+
+let test=[1,2,3,4,5];
+let result=_join(test);
+console.log(result);
+
+return array.join("");
+
+```
+
+## **FED39** **数组最大值**
+
+请补全JavaScript函数，要求找到数组参数中的最大值并返回。
+注意：数组中只包含数字。
+
+```js
+function _max(array) {
+    // 补全代码
+    let max=array[0];
+    for (let i = 1; i < array.length; i++) {
+        if (array[i]>max) { max=array[i]; }
+    }
+    return max;
+}
+
+let test=[1,2,3,4,5];
+let result=_max(test);
+console.log(result);
+
+return Math.max(...array);
+return Math.max.apply(null,array);
+
+function _max(array) {
+    array.sort((a,b)=>b-a)
+    return array[0];
+}
+```
+
+## **FED40** **搜索数字**
+
+请补全JavaScript函数，要求以boolean的形式返回字符串参数中是否包含数字。
+
+```js
+function _search(string) {
+    // 补全代码
+    return /\d/.test(string);
+}
+
+let test="fdsfd3fd2";
+let result=_search(test);
+console.log(result);
+
+function _search(string) {
+    // 补全代码
+    for (let c of string){
+        if(!isNaN(c)){
+            return true;
+        }
+    }
+    return false;
+}
+```
+
+## **FED41** **头部插入元素**
+
+请补全JavaScript函数，要求将第二个参数插入第一个参数数组的头部，并且以数组的形式返回。
+
