--- a/力扣初级算法.md
+++ b/力扣初级算法.md
@@ -321,9 +321,59 @@ public int singleNumber(int[] nums){
 如果 nums1 的大小比 nums2 小，哪种方法更优？
 如果 nums2 的元素存储在磁盘上，内存是有限的，并且你不能一次加载所有的元素到内存中，你该怎么办？
 
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number[]} nums2
+ * @return {number[]}
+ */
+var intersect = function(nums1, nums2) {
+    nums1.sort((a,b)=>a-b);
+    nums2.sort((a,b)=>a-b);
+    let count1=1;
+    let count2=0;
+    let i;
+    let j;
+    let results=new Array();
+    let temp=nums1[0];
+    for (i=0,j=0;i<nums1.length,j<=nums2.length;){
+        if (j==nums2.length || nums1[i]<nums2[j]) {
+            i++;
+            if (count2!==0) {
+                if (nums1[i]==nums1[i-1]){
+                    count1++;
+                }else{
+                    for ( let k=0;k<Math.min(count1,count2);k++){
+                        results.push(temp);
+                    }
+                    temp=nums1[i];
+                    count1=1;
+                    count2=0;
+                    if (j==nums2.length){ j++;}
+                }
+            }else{
+                temp=nums1[i];
+            }
+        }else if(nums1[i]>nums2[j]){
+            j++;
+        }else{
+            j++;
+            count2++;
+        }
+    }
+    if (count2!=0){
+        for ( let k=0;k<Math.min(count1,count2);k++){
+            results.push(temp);
+        }
+    }
+    return results;
+};
 
-
-```
+let str1 = [2, 4, 4, 5, 9,5, 9, 9];
+let str2 = [4, 4,9, 5,4, 8, 9, 9 ];
+let result=intersect(str1,str2);
+//console.log(typeof result);
+console.log(result);
 
 ```
 
