--- a/牛客前端基础编程题.md
+++ b/牛客前端基础编程题.md
@@ -1012,3 +1012,218 @@ function _search(string) {
 
 请补全JavaScript函数，要求将第二个参数插入第一个参数数组的头部，并且以数组的形式返回。
 
+```js
+function _unshift(array,value) {
+    // 补全代码
+    for (let i = array.length; i >0; i--) {
+        array[i]=array[i-1];
+    }
+    array[0]=value;
+    return array;
+}
+
+let test=[1,3,4,5,6];
+let val=2;
+let result=_unshift(test,val);
+console.log(result);
+
+function _unshift(array,value) {
+    // 补全代码
+    array.unshift(value);
+    return array;
+}
+
+return new Array(value,...array);
+```
+
+## **FED42** **尾部插入元素**
+
+请补全JavaScript函数，要求将第二个参数插入第一个参数数组的尾部，并且以数组的形式返回。
+
+```js
+function _push(array,value) {
+    // 补全代码
+    array[array.length]=value;
+    return array;
+}
+
+function _push(array,value) {
+    // 补全代码
+    array.push(value);
+    return array;
+}
+
+let test=[1,3,4,5,6];
+let val=2;
+let result=_push(test,val);
+console.log(result);
+
+function _push(array,value) {
+    // 补全代码
+    return new Array(...array,value);
+}
+```
+
+## **FED43** **js-位置查找**
+
+请补全JavaScript函数，要求以数字的形式返回第一个参数数组中第二个参数所在的首个索引值。注意：如果数组中不存在目标值，则返回-1。
+
+```js
+function _indexof(array,value) {
+    // 补全代码
+    for (let i = 0; i < array.length; i++) {
+        if (array[i]===value) {
+            return i;
+        }
+    }
+    return -1;
+}
+
+let test=[1,3,4,5,6];
+let val=2;
+let result=_indexof(test,val);
+console.log(result);
+
+return array.indexOf(value);
+```
+
+## **FED44** **向下取整**
+
+请补全JavaScript函数，要求以数字的形式返回数字参数向下取整的结果。
+
+```js
+function _floor(number) {
+    // 补全代码
+    return Math.floor(number);
+}
+function _floor(number) {
+    // 补全代码
+    return parseInt(number);
+}
+function _floor(number) {
+    // 补全代码
+    return number-number%1;
+}
+```
+
+## **FED45** **整数反转**
+
+请补全JavaScript函数，要求将整数参数反转之后输出。
+示例：
+\1. _reverse(0) -> 0
+\2. _reverse(233) -> 332
+\3. _reverse(-223) -> -322
+
+```js
+function _reverse(number) {
+    // 补全代码
+    let val=0;
+    while(number>=10){
+        val=(val+number%10)*10;
+        number=parseInt(number/10);
+    }
+    val+=number;
+    return val;
+}
+
+let test=10234;
+let result=_reverse(test);
+console.log(result);
+
+function _reverse(number) {
+    // 补全代码
+    let mark = 1
+    if(number<0){
+        mark = -1
+        number = -number
+    }
+    return Number(Array.from(String(number)).reverse().join(''))*mark
+}
+
+
+```
+
+## **FED46** **字符串搜索**
+
+请补全JavaScript函数，要求以boolean的形式返回字符串首参中是否包含第二个参数。
+
+```js
+function _search(string,value) {
+    // 补全代码
+    return string.indexOf(value)!==-1;
+}
+
+let test="dsdfefew";
+let result=_search(test,"dd");
+console.log(result);
+
+function _search(string,value) {
+    // 补全代码
+    return string.search(value)!==-1;
+}
+
+function _search(string,value) {
+    // 补全代码
+    return [...string].includes(value);
+}
+```
+
+search() 方法用于检索字符串中指定的子字符串，或检索与正则表达式相匹配的子字符串。如果没有找到任何匹配的子串，则返回 -1。
+
+## **FED47** **函数——参数对象**
+
+请补全JavaScript函数，要求返回它的参数伪数组对象。
+
+```js
+function getArguments (a,b,c) {
+    // 补充代码
+    return [...arguments];
+}
+function getArguments (a,b,c) {
+    // 补充代码
+    return Array.of(a,b,c);
+}
+function getArguments (a,b,c) {
+    // 补充代码
+    return new Array(a,b,c);
+}
+```
+
+## **FED48** **this指向**
+
+请补全JavaScript函数，使obj对象中fn函数返回该对象中a属性和b属性的和。
+
+```js
+var obj = {
+    a: 1,
+    b: 2,
+    fn: function(){
+        // 补全代码
+        return this.a+this.b;
+    }
+}
+
+var obj = {
+    a: 1,
+    b: 2,
+    fn: function(){
+        // 补全代码
+        return obj.a+obj.b;
+    }
+}
+```
+
+## **FED49** **JS动态创建节点**
+
+## 描述
+
+请补全JavaScript函数，根据参数数组创建li元素。
+要求：
+\1. li元素的个数和数组的长度一样
+\2. li元素的内容是数组中的每个元素
+\3. 将创建的所有li元素插入到ul中
+
+```
+
+```
+
