--- a/力扣初级算法.md
+++ b/力扣初级算法.md
@@ -375,7 +375,100 @@ let result=intersect(str1,str2);
 //console.log(typeof result);
 console.log(result);
 
+//超时
 ```
+
+使用双指针
+
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number[]} nums2
+ * @return {number[]}
+ */
+var intersect = function(nums1, nums2) {
+    nums1.sort((a,b)=>a-b);
+    nums2.sort((a,b)=>a-b);
+
+    let i=0,j=0;
+    let results=new Array();
+    let temp=nums1[0];
+    for (i=0,j=0;i<nums1.length,j<nums2.length;){
+        if (nums1[i]==nums2[j]) {
+            results.push(nums1[i]);
+            i++;
+            j++;
+        }else{
+            if (nums1[i]<nums2[j]) {
+                i++;
+            }else{
+                j++;
+            }
+        }
+    }
+    return results;
+};
+```
+
+### 7. 加一
+
+给定一个由 整数 组成的 非空 数组所表示的非负整数，在该数的基础上加一。
+
+最高位数字存放在数组的首位， 数组中每个元素只存储单个数字。
+
+你可以假设除了整数 0 之外，这个整数不会以零开头。
+
+```
+输入：digits = [1,2,3]
+输出：[1,2,4]
+解释：输入数组表示数字 123。
+```
+
+```js
+/**
+ * @param {number[]} digits
+ * @return {number[]}
+ */
+var plusOne = function(digits) {
+    digits[digits.length-1]+=1;
+    //从后往前循环到第二位
+    for (let i=digits.length-1;i>0;i--){
+        if (digits[i]<10){
+            break;
+        }else{
+             digits[i]=0;
+             digits[i-1]+=1;
+        }
+    }
+    if (digits[0]===10) {
+        //特例9999这种
+        digits[0]=1;
+        digits[digits.length]=0;
+    }
+    return digits;
+};
+
+let str1 = [2, 4, 4, 5, 9,5, 9, 9];
+let str2 = [9, 9, 9 ];
+let result=plusOne(str1);
+//console.log(typeof result);
+console.log(result);
+```
+
+### 8. 移动零
+
+给定一个数组 `nums`，编写一个函数将所有 `0` 移动到数组的末尾，同时保持非零元素的相对顺序。
+
+```
+输入: [0,1,0,3,12]
+输出: [1,3,12,0,0]
+```
+
+```
+
+```
+
+
 
 
 
